new text in post

--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -5,6 +5,9 @@ date: 2014-07-18
 img: cabin.png
 alt: image-alt
 description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam. Have changes been made yet?
+
+Does this stuff show up somewhere? If so where?
+
 ---
 
 Does this stuff show up somewhere? If so where?
