--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -4,7 +4,7 @@ modal-id: 1
 project-date: 2014-07-18
 img: cabin.png
 alt: image-alt
-link: http://data.library.virginia.edu/getting-started-with-pandas-in-python/
+link: data.library.virginia.edu/getting-started-with-pandas-in-python/
 description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam. Have changes been made yet?
 # First level header
 ---
