more markdown changes to test

--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -8,10 +8,15 @@ link: http://data.library.virginia.edu/getting-started-with-pandas-in-python/
 link-abrev: data.library.virginia.edu
 description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam. Have changes been made yet?
 md: "
+
 <h1>Heading level 1</h1>
+
 
 <h2>Heading level 2</h2>
 
-\n Is this working now???
+
+\n\n Is this working now???
+
+\n Less space here
 "
 ---
