try line breaks

--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -15,8 +15,11 @@ md: "
 <h2>Heading level 2</h2>
 
 
-\n\n Is this working now???
+<br>
+<br>
+Is this working now???
 
-\n Less space here
+<br>
+Less space here
 "
 ---
