--- a/_posts/2020-11-10-project-1.markdown
+++ b/_posts/2020-11-10-project-1.markdown
@@ -6,8 +6,8 @@ img: covid.png
 alt: covid
 link: http://data.library.virginia.edu/getting-started-with-pandas-in-python/
 link-abrev: data.library.virginia.edu
-title: Pandas Covid
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam. Have changes been made yet?
+title: Getting Started with Pandas in Python
+description: The pandas package is an open-source software library written for data analysis in Python. In this article, we'll explore briefly some of the most commonly used functions and methods for understanding, formatting, and visualizing data with the pandas package. We'll be using the Virginia Department of Health (VDH) COVID-19 Public Use Dataset in the working example presented here.
 md: "
 
 <h1>Heading level 1</h1>
