--- a/_posts/2020-11-10-project-1.markdown
+++ b/_posts/2020-11-10-project-1.markdown
@@ -11,7 +11,7 @@ description: The pandas package is an open-source software library written for d
 md: "
 I published this article during my time as a StatLab Fellow with the University of Virginia Library, Research Data Services and Sciences team.
 <br><br>
-The article is not reproduced here; instead, please follow <a href="https://data.library.virginia.edu/getting-started-with-pandas-in-python/">this link</a> to the University of Virginia Library StatLab Blog to see the original publication. <br><br>
+The article is not reproduced here; instead, please follow this link to the University of Virginia Library StatLab Blog to see the original publication. <br><br>
 The pandas package is an open-source software library written for data analysis in Python. Pandas allows users to import data from various file formats (comma-separated values, JSON, SQL, fits, etc.) and perform data manipulation operations, including cleaning and reshaping the data, summarizing observations, grouping data, and merging multiple datasets. In this article, we'll explore briefly some of the most commonly used function and methods for understanding, formatting, and visualizing data with the pandas package. <br>
 The pandas package is an open-source software library written for data analysis in Python. Pandas allows users to import data from various file formats (comma-separated values, JSON, SQL, fits, etc.) and perform data manipulation operations, including cleaning and reshaping the data, summarizing observations, grouping data, and merging multiple datasets. In this article, we'll explore briefly some of the most commonly used function and methods for understanding, formatting, and visualizing data with the pandas package. <br><br>
 This package has already been [elaborately documented](https://pandas.pydata.org/pandas-docs/stable/user_guide/index.html), but so much information can easily become overwhelming. This article is meant to provide a brief introduction to the pandas package, to ease you into its use with an example dataset. We assume that you have already installed pandas as part of your Anaconda/Python 3.6.1+ installation, but if not, you can find some quick install instructions [here](https://pandas.pydata.org/pandas-docs/stable/getting_started/install.html). <br>
