--- a/_posts/2020-11-10-project-1.markdown
+++ b/_posts/2020-11-10-project-1.markdown
@@ -8,12 +8,12 @@ link: https://data.library.virginia.edu/getting-started-with-pandas-in-python/
 link-abrev: data.library.virginia.edu
 title: Getting Started with Pandas in Python
 description: The pandas package is an open-source software library written for data analysis in Python. In this article, I will explore briefly some of the most commonly used functions and methods for understanding, formatting, and visualizing data with the pandas package. I'll be using the Virginia Department of Health (VDH) COVID-19 Public Use Dataset in the working example presented here.
-md: """
+md: "
 <br><br>
 
 I published this article during my time as a StatLab Fellow with the University of Virginia Library, Research Data Services and Sciences team.
 <br><br>
 
-The article is not reproduced here; instead, please follow the link below (under "Original Publication") to the University of Virginia Library StatLab Blog to see the original publication.
-"""
+The article is not reproduced here; instead, please follow the link below (under \"Original Publication\") to the University of Virginia Library StatLab Blog to see the original publication.
+"
 ---
